--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -11,6 +11,8 @@ env:
   ECS_SERVICE: cicd-service                  # set this to your Amazon ECS service name
   ECS_CLUSTER: my-cicd                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ci-github
+  aws-access-key-id: AKIARFRFZ5VS3AM2JRVU
+  aws-secret-access-key: 6DRAdf4DBSFDqh9fH8/dwgeR8doa2aL3ARpqX9eE
   CONTAINER_NAME: ci-container           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
