--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: 080609930597.dkr.ecr.ap-south-1.amazonaws.com/brahma
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
