--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -50,7 +50,7 @@ jobs:
         # push it to ECR so that it can
         # be deployed to ECS.
         docker build -t $ECR_REGISTRY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY:$IMAGE_TAG $ECR_REPOSITORY:$IMAGE_TAG
+        docker push $ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: Fill in the new image ID in the Amazon ECS task definition
